sqlite/src/bindings/sqlite3_bindings.rs

unsafe extern "C" {
    pub fn sqlite3_malloc(arg1: core::ffi::c_int) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_malloc64(arg1: sqlite3_uint64) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_realloc(
        arg1: *mut core::ffi::c_void,
        arg2: core::ffi::c_int,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_realloc64(
        arg1: *mut core::ffi::c_void,
        arg2: sqlite3_uint64,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_free(arg1: *mut core::ffi::c_void);
}
unsafe extern "C" {
    pub fn sqlite3_msize(arg1: *mut core::ffi::c_void) -> sqlite3_uint64;
}
unsafe extern "C" {
    pub fn sqlite3_memory_used() -> sqlite3_int64;
}
unsafe extern "C" {
    pub fn sqlite3_memory_highwater(resetFlag: core::ffi::c_int) -> sqlite3_int64;
}
unsafe extern "C" {
    pub fn sqlite3_randomness(N: core::ffi::c_int, P: *mut core::ffi::c_void);
}
unsafe extern "C" {
    pub fn sqlite3_set_authorizer(
        arg1: *mut sqlite3,
        xAuth: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: core::ffi::c_int,
                arg3: *const core::ffi::c_char,
                arg4: *const core::ffi::c_char,
                arg5: *const core::ffi::c_char,
                arg6: *const core::ffi::c_char,
            ) -> core::ffi::c_int,
        >,
        pUserData: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_trace(
        arg1: *mut sqlite3,
        xTrace: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut core::ffi::c_void, arg2: *const core::ffi::c_char),
        >,
        arg2: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_profile(
        arg1: *mut sqlite3,
        xProfile: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: *const core::ffi::c_char,
                arg3: sqlite3_uint64,
            ),
        >,
        arg2: *mut core::ffi::c_void,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_trace_v2(
        arg1: *mut sqlite3,
        uMask: core::ffi::c_uint,
        xCallback: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: core::ffi::c_uint,
                arg2: *mut core::ffi::c_void,
                arg3: *mut core::ffi::c_void,
                arg4: *mut core::ffi::c_void,
            ) -> core::ffi::c_int,
        >,
        pCtx: *mut core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_progress_handler(
        arg1: *mut sqlite3,
        arg2: core::ffi::c_int,
        arg3: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut core::ffi::c_void) -> core::ffi::c_int,
        >,
        arg4: *mut core::ffi::c_void,
    );
}
unsafe extern "C" {
    pub fn sqlite3_open(
        filename: *const core::ffi::c_char,
        ppDb: *mut *mut sqlite3,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_open16(
        filename: *const core::ffi::c_void,
        ppDb: *mut *mut sqlite3,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_open_v2(
        filename: *const core::ffi::c_char,
        ppDb: *mut *mut sqlite3,
        flags: core::ffi::c_int,
        zVfs: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_uri_parameter(
        z: sqlite3_filename,
        zParam: *const core::ffi::c_char,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_uri_boolean(
        z: sqlite3_filename,
        zParam: *const core::ffi::c_char,
        bDefault: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_uri_int64(
        arg1: sqlite3_filename,
        arg2: *const core::ffi::c_char,
        arg3: sqlite3_int64,
    ) -> sqlite3_int64;
}
unsafe extern "C" {
    pub fn sqlite3_uri_key(z: sqlite3_filename, N: core::ffi::c_int) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_filename_database(arg1: sqlite3_filename) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_filename_journal(arg1: sqlite3_filename) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_filename_wal(arg1: sqlite3_filename) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_database_file_object(arg1: *const core::ffi::c_char) -> *mut sqlite3_file;
}
unsafe extern "C" {
    pub fn sqlite3_create_filename(
        zDatabase: *const core::ffi::c_char,
        zJournal: *const core::ffi::c_char,
        zWal: *const core::ffi::c_char,
        nParam: core::ffi::c_int,
        azParam: *mut *const core::ffi::c_char,
    ) -> sqlite3_filename;
}
unsafe extern "C" {
    pub fn sqlite3_free_filename(arg1: sqlite3_filename);
}
unsafe extern "C" {
    pub fn sqlite3_errcode(db: *mut sqlite3) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_extended_errcode(db: *mut sqlite3) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_errmsg(arg1: *mut sqlite3) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_errmsg16(arg1: *mut sqlite3) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_errstr(arg1: core::ffi::c_int) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_error_offset(db: *mut sqlite3) -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_stmt {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn sqlite3_limit(
        arg1: *mut sqlite3,
        id: core::ffi::c_int,
        newVal: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_prepare(
        db: *mut sqlite3,
        zSql: *const core::ffi::c_char,
        nByte: core::ffi::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_prepare_v2(
        db: *mut sqlite3,
        zSql: *const core::ffi::c_char,
        nByte: core::ffi::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_prepare_v3(
        db: *mut sqlite3,
        zSql: *const core::ffi::c_char,
        nByte: core::ffi::c_int,
        prepFlags: core::ffi::c_uint,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_prepare16(
        db: *mut sqlite3,
        zSql: *const core::ffi::c_void,
        nByte: core::ffi::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_prepare16_v2(
        db: *mut sqlite3,
        zSql: *const core::ffi::c_void,
        nByte: core::ffi::c_int,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_prepare16_v3(
        db: *mut sqlite3,
        zSql: *const core::ffi::c_void,
        nByte: core::ffi::c_int,
        prepFlags: core::ffi::c_uint,
        ppStmt: *mut *mut sqlite3_stmt,
        pzTail: *mut *const core::ffi::c_void,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_sql(pStmt: *mut sqlite3_stmt) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_expanded_sql(pStmt: *mut sqlite3_stmt) -> *mut core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_readonly(pStmt: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_isexplain(pStmt: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_explain(
        pStmt: *mut sqlite3_stmt,
        eMode: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_stmt_busy(arg1: *mut sqlite3_stmt) -> core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_value {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sqlite3_context {
    _unused: [u8; 0],
}
unsafe extern "C" {
    pub fn sqlite3_bind_blob(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: *const core::ffi::c_void,
        n: core::ffi::c_int,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_blob64(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: *const core::ffi::c_void,
        arg4: sqlite3_uint64,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_double(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: f64,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_int(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_int64(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: sqlite3_int64,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_null(arg1: *mut sqlite3_stmt, arg2: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_text(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: *const core::ffi::c_char,
        arg4: core::ffi::c_int,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_text16(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: *const core::ffi::c_void,
        arg4: core::ffi::c_int,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_text64(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: *const core::ffi::c_char,
        arg4: sqlite3_uint64,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
        encoding: core::ffi::c_uchar,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_value(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: *const sqlite3_value,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_pointer(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: *mut core::ffi::c_void,
        arg4: *const core::ffi::c_char,
        arg5: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_zeroblob(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        n: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_zeroblob64(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
        arg3: sqlite3_uint64,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_parameter_count(arg1: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_bind_parameter_name(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_bind_parameter_index(
        arg1: *mut sqlite3_stmt,
        zName: *const core::ffi::c_char,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_clear_bindings(arg1: *mut sqlite3_stmt) -> core::ffi::c_int;
}
